<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.fragmentsystem.EnterNames">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_title"
                android:textSize="10pt"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourNames"
                    android:inputType="textPersonName"
                    android:hint="@string/your_name"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourAge"
                    android:inputType="number"
                    android:hint="@string/your_age"/>
                <Spinner
                    android:id="@+id/SpinnerFeedbackType"
                    android:layout_height="wrap_content"
                    android:prompt="@string/foodtype1"
                    android:layout_width="fill_parent"
                    android:entries="@array/feedbacktypelist">
                </Spinner>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
