<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.fragmentsystem.Detail_Fragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nameyourfile" />
            <EditText
                android:id = "@+id/FileName"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType = "text"
                android:hint="@string/yourfilename"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/submit"
                android:text="@string/submit"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
    <!-- TODO: Update blank fragment layout -->


</LinearLayout>
